--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <div class="bullet">
           <img class="b-image" src="in_progress.png" alt="">
-          <span class="b-title">Intuitive</span>
-          <span class="b-description">Strong preference for easy to use, intuitive UX/UI.
+          <span class="b-title">Simple</span>
+          <span class="b-description">Keep it simple.
           </span>
         </div>
         <div class="bullet">
@@ -59,8 +59,8 @@
         <div class="skills">
           <div class="skill">
             <span>JavaScript</span>
-            <div class="skillBar" style="width: 100%"></div>
-            <span>100%</span>
+            <div class="skillBar" style="width: 80%"></div>
+            <span>80%</span>
           </div>
           <div class="skill">
             <span>CSS</span>
@@ -69,35 +69,29 @@
           </div>
           <div class="skill">
             <span>Swift</span>
-            <div class="skillBar" style="width: 60%"></div>
-            <span>60%</span>
-          </div>
-          <div class="skill">
-            <span>Java</span>
             <div class="skillBar" style="width: 50%"></div>
             <span>50%</span>
           </div>
           <div class="skill">
             <span>HTML</span>
-            <div class="skillBar" style="width: 30%"></div>
-            <span>30%</span>
+            <div class="skillBar" style="width: 90%"></div>
+            <span>90%</span>
           </div>
           <div class="skill">
-            <span>Photografy</span>
-            <div class="skillBar" style="width: 70%"></div>
-            <span>70%</span>
-          </div>
-          <div class="skill">
-            <span>Photografy</span>
-            <div class="skillBar" style="width: 20%"></div>
-            <span>20%</span>
-          </div>
-          <div class="skill">
-            <span>Photografy</span>
+            <span>Node.js</span>
             <div class="skillBar" style="width: 60%"></div>
             <span>60%</span>
           </div>
-          
+          <div class="skill">
+            <span>MongoDB</span>
+            <div class="skillBar" style="width: 40%"></div>
+            <span>40%</span>
+          </div>
+          <div class="skill">
+            <span>SQL</span>
+            <div class="skillBar" style="width: 40%"></div>
+            <span>40%</span>
+          </div>
         </div>
       </div>
     </section>
@@ -106,55 +100,30 @@
       <div class="squares">
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>RAI Front-End</span>
+            <span class="s-title">RAI Front-End</span>
             <ul>
-              <span>JavaScript</span>
-              <span>CSS</span>
+              <span class="s-description">JavaScript</span>
+              <span class="s-description">CSS</span>
+              <span class="s-description">HTML</span>
+              <span class="s-description">XSL</span>
+              <span class="s-description">SQL</span>
+              <span class="s-description">MongoDB</span>
             </ul>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>RaiPlay iOS</span>
+            <span class="s-title">RaiPlay iOS</span>
             <ul>
-              <span>Swift</span>
-              <span>XSL</span>
+              <span class="s-description">Swift</span>
             </ul>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Title's project</span>
+            <span class="s-title">RaiPlay tvOS</span>
             <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
-          </div>
-        </div>
-        <div class="square"><img src="in_progress.png" alt="">
-          <div class="squareText">
-            <span>Title's project</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
-          </div>
-        </div>
-        <div class="square"><img src="in_progress.png" alt="">
-          <div class="squareText">
-            <span>Title's project</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
-          </div>
-        </div>
-        <div class="square"><img src="in_progress.png" alt="">
-          <div class="squareText">
-            <span>Title's project</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
+              <span class="s-description">Swift</span>
             </ul>
           </div>
         </div>
@@ -165,62 +134,33 @@
       <div class="squares">
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Teatro - Recitazione</span>
-            <ul>
-              <span>Nuovo Teatro San Paolo</span>
-            </ul>
+            <span class="s-title">Teatro - Recitazione</span>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Fitness</span>
-            <ul>
-              <span>Calisthenics</span>
-              <span>Powerlifting</span>
-              <span>Bodybuilding</span>
-            </ul>
+            <span class="s-title">Calisthenics</span>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Title's hobby</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
+            <span class="s-title">Powerlifting</span>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Title's hobby</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
+            <span class="s-title">Running</span>
           </div>
         </div>
         <div class="square"><img src="in_progress.png" alt="">
           <div class="squareText">
-            <span>Title's hobby</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
-          </div>
-        </div>
-        <div class="square"><img src="in_progress.png" alt="">
-          <div class="squareText">
-            <span>Title's hobby</span>
-            <ul>
-              <span>Skill</span>
-              <span>Skill</span>
-            </ul>
+            <span class="s-title">Reading</span>
           </div>
         </div>
       </div>
     </section>
     <section id="contact" class="contact">
-      <div class="backToTop" onclick="backToTop()">↑</div>
+      <div class="backToTop" onclick="backToTop()"><img src="arrowup.png" alt="" srcset=""></div>
       <div class="title"><span>Contact</span></div>
       <div class="contacts">
         <div class="contactItem"><img src="in_progress.png" alt=""></div>
