--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <button class="startButton" onclick="start()">Click me!</button>
     </section>
     <nav id="menu" class="menu">
-      <div><a href="#presentation">INTRO</a></div>
-      <div><a href="#about">ABOUT</a></div>
-      <div><a href="#projects">PROJECTS</a></div>
-      <div><a href="#hobby">HOBBY</a></div>
-      <div><a href="#contacts">CONTACTS</a></div>
+      <div><a id="presentationLink" href="#presentation">INTRO</a></div>
+      <div><a id="aboutLink" href="#about">ABOUT</a></div>
+      <div><a id="projectsLink" href="#projects">PROJECTS</a></div>
+      <div><a id="hobbyLink" href="#hobby">HOBBY</a></div>
+      <div><a id="contactsLink" href="#contacts">CONTACTS</a></div>
     </nav>
     
     <section id="about" class="about">
