--- a/index.html
+++ b/index.html
@@ -30,34 +30,31 @@
         <div class="bullets">
           <div class="bullet">
             <img class="b-image" src="in_progress.png" alt="">
-            <span class="b-title">Fast</span>
-            <span class="b-description">Fast load times and lag free interaction, my highest priority.</span>
+            <span class="b-title">Veloce</span>
+            <span class="b-description">Una grande priorità è ottenere i caricamenti rapidi durante le interazioni.</span>
           </div>
           <div class="bullet">
             <img class="b-image" src="in_progress.png" alt="">
-            <span class="b-title">Simple</span>
-            <span class="b-description">Keep it simple.
-            </span>
+            <span class="b-title">Semplice</span>
+            <span class="b-description">"Keep it simple".</span>
           </div>
           <div class="bullet">
             <img class="b-image" src="in_progress.png" alt="">
-            <span class="b-title">Responsive</span>
-            <span class="b-description">My layouts will work on any device, big or small.
-            </span>
+            <span class="b-title">Dinamico</span>
+            <span class="b-description">I vari layouts devono adattarsi a ogni forma, grande o piccola che sia.</span>
           </div>
           <div class="bullet">
             <img class="b-image" src="in_progress.png" alt="">
-            <span class="b-title">Dynamic</span>
-            <span class="b-description">Websites don't have to be static, I love making pages come to life.
-            </span>
+            <span class="b-title">Curioso</span>
+            <span class="b-description">Scoprire nuovi approcci metodologici.</span>
           </div>
         </div>
         
         <div class="skills-specialBullet-container">
           <div class="specialBullet">
             <img class="sb-image" src="in_progress.png" alt="">
-            <span class="sb-title">Who's this guy?</span>
-            <span class="sb-description">I'm a Front-End Developer for ChowNow in Los Angeles, CA. I have serious passion for UI effects, animations and creating intuitive, dynamic user experiences. Let's make something special.</span>
+            <span class="sb-title">Chi è questo tizio?</span>
+            <span class="sb-description">Attualmente, sono uno sviluppatore Front-End residente a Roma. Ho una passione per il mondo IT, mi piace fornire soluzioni innovative implementando diverse strategie di ottimizzazione e risoluzione del caso.</span>
           </div>
           <div class="skills">
             <div class="skill">
