--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="sectionTitle"><span>PROJECTS</span></div>
       <div class="squares">
         <div class="square">
-          <img src="in_progress.png" alt="">
+          <img src="logo_RAI.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">RAI Front-End</span>
             <div>
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="square">
-          <img src="in_progress.png" alt="">
+          <img src="logo_raiplay.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">RaiPlay iOS</span>
             <div>
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="square">
-          <img src="in_progress.png" alt="">
+          <img src="logo_raiplay.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">RaiPlay tvOS</span>
             <div>
@@ -138,12 +138,12 @@
     <section id="hobby" class="hobby">
       <div class="sectionTitle"><span>HOBBY</span></div>
       <div class="squares">
-        <div class="square"><img src="in_progress.png" alt="">
+        <div class="square"><img src="teatro.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">Teatro - Recitazione</span>
           </div>
         </div>
-        <div class="square"><img src="in_progress.png" alt="">
+        <div class="square"><img src="calisthenics.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">Calisthenics</span>
           </div>
@@ -153,12 +153,12 @@
             <span class="s-title">Powerlifting</span>
           </div>
         </div>
-        <div class="square"><img src="in_progress.png" alt="">
+        <div class="square"><img src="running.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">Running</span>
           </div>
         </div>
-        <div class="square"><img src="in_progress.png" alt="">
+        <div class="square"><img src="reading.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">Reading</span>
           </div>
