--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 
 <head>
+  <meta charset="utf-8">
   <title>Valerio delle Fave</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="HandheldFriendly" content="true">
@@ -59,37 +60,37 @@
           <div class="skills">
             <div class="skill">
               <span>JavaScript</span>
-              <div class="skillBar" style="width: 80%"></div>
+              <div class="skillBar"></div>
               <span>80%</span>
             </div>
             <div class="skill">
               <span>CSS</span>
-              <div class="skillBar" style="width: 80%"></div>
+              <div class="skillBar"></div>
               <span>80%</span>
             </div>
             <div class="skill">
               <span>Swift</span>
-              <div class="skillBar" style="width: 50%"></div>
+              <div class="skillBar"></div>
               <span>50%</span>
             </div>
             <div class="skill">
               <span>HTML</span>
-              <div class="skillBar" style="width: 90%"></div>
+              <div class="skillBar"></div>
               <span>90%</span>
             </div>
             <div class="skill">
               <span>Node.js</span>
-              <div class="skillBar" style="width: 60%"></div>
+              <div class="skillBar"></div>
               <span>60%</span>
             </div>
             <div class="skill">
               <span>MongoDB</span>
-              <div class="skillBar" style="width: 100%"></div>
-              <span>100%</span>
+              <div class="skillBar"></div>
+              <span>40%</span>
             </div>
             <div class="skill">
               <span>SQL</span>
-              <div class="skillBar" style="width: 40%"></div>
+              <div class="skillBar"></div>
               <span>40%</span>
             </div>
           </div>
@@ -173,27 +174,27 @@
 
       <div class="contactsContainer">
         <div class="contact">
-          <a href="mailto:valerio.dellefave00@gmail.com">
+          <a href="mailto:valerio.dellefave00@gmail.com" title="Send me a mail">
             <img src="icons/email.png" alt="" srcset="">
           </a>
         </div>
         <div class="contact">
-          <a href="https://www.facebook.com/valerio.dellefave">
+          <a href="https://www.facebook.com/valerio.dellefave" title="Facebook profile">
             <img src="icons/facebook.png" alt="" srcset="">
           </a>
         </div>
         <div class="contact">
-          <a href="https://github.com/ValeriodelleFave">
+          <a href="https://github.com/ValeriodelleFave" title="GitHub profile">
             <img src="icons/github.png" alt="" srcset="">
           </a>
 	      </div>
         <div class="contact">
-          <a href="https://www.instagram.com/valerio_dellefave">
+          <a href="https://www.instagram.com/valerio_dellefave" title="Instagram profile">
             <img src="icons/instagram.png" alt="" srcset="">
           </a>
         </div>
         <div class="contact">
-          <a href="https://www.linkedin.com/in/valerio-delle-fave">
+          <a href="https://www.linkedin.com/in/valerio-delle-fave" title="LinkedIn profile">
             <img src="icons/linkedin.png" alt="" srcset="">
           </a>
         </div>
