--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section id="presentation" class="presentation">
       <span>Ciao, sono <b>Valerio</b>. <br>Sono un tizio qualunque.</span>
-      <button class="startButton" onclick="start()">Click me!</button>
+      <button class="startButton" onclick="start()">Iniziamo!</button>
     </section>
     <nav id="menu" class="menu">
       <div><a id="presentationLink" href="#presentation">INTRO</a></div>
@@ -102,6 +102,16 @@
       <div class="sectionTitle"><span>PROJECTS</span></div>
       <div class="squares">
         <div class="square">
+          <img src="logo_raiplay.png" alt="">
+          <div class="squareTextContainer">
+            <span class="s-title">RaiPlay iOS</span>
+            <div>
+              <span>Programmazione iOS/iPad</span>
+              <span>Swift</span>
+            </div>
+          </div>
+        </div>
+        <div class="square">
           <img src="logo_RAI.png" alt="">
           <div class="squareTextContainer">
             <span class="s-title">RAI Front-End</span>
@@ -118,17 +128,9 @@
         <div class="square">
           <img src="logo_raiplay.png" alt="">
           <div class="squareTextContainer">
-            <span class="s-title">RaiPlay iOS</span>
-            <div>
-              <span>Swift</span>
-            </div>
-          </div>
-        </div>
-        <div class="square">
-          <img src="logo_raiplay.png" alt="">
-          <div class="squareTextContainer">
             <span class="s-title">RaiPlay tvOS</span>
             <div>
+              <span>Programmazione Apple TV</span>
               <span>Swift</span>
             </div>
           </div>
@@ -146,22 +148,17 @@
         </div>
         <div class="square"><img src="calisthenics.png" alt="">
           <div class="squareTextContainer">
-            <span class="s-title">Calisthenics</span>
-          </div>
-        </div>
-        <div class="square"><img src="in_progress.png" alt="">
-          <div class="squareTextContainer">
-            <span class="s-title">Powerlifting</span>
+            <span class="s-title">Fitness</span>
           </div>
         </div>
         <div class="square"><img src="running.png" alt="">
           <div class="squareTextContainer">
-            <span class="s-title">Running</span>
+            <span class="s-title">Corsa</span>
           </div>
         </div>
         <div class="square"><img src="reading.png" alt="">
           <div class="squareTextContainer">
-            <span class="s-title">Reading</span>
+            <span class="s-title">Lettura</span>
           </div>
         </div>
       </div>
