--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="This is my personal website.">
-  <link rel="stylesheet" href="!style_minified.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="roboto.css">
-  <script src="!script_minified.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
     <section id="presentation" class="presentation">
-      <span>Ciao, sono <b>Valerio</b>. <br>Sono un tizio qualunque.</span>
+      <span>Ciao, sono <b>Valerio</b>. <br>Sono uno sviluppatore Front-End.</span>
       <button class="startButton" onclick="start()">Iniziamo!</button>
     </section>
     <nav id="menu" class="menu">
@@ -30,22 +30,22 @@
       <div class="aboutContainer">
         <div class="bullets">
           <div class="bullet">
-            <img class="b-image" src="in_progress.png" alt="">
+            <img class="b-image" src="speed.png" alt="">
             <span class="b-title">Veloce</span>
             <span class="b-description">Una grande priorità è ottenere i caricamenti rapidi durante le interazioni.</span>
           </div>
           <div class="bullet">
-            <img class="b-image" src="in_progress.png" alt="">
+            <img class="b-image" src="simple.png" alt="">
             <span class="b-title">Semplice</span>
             <span class="b-description">"Keep it simple".</span>
           </div>
           <div class="bullet">
-            <img class="b-image" src="in_progress.png" alt="">
+            <img class="b-image" src="dynamic.png" alt="">
             <span class="b-title">Dinamico</span>
             <span class="b-description">I vari layouts devono adattarsi a ogni forma, grande o piccola che sia.</span>
           </div>
           <div class="bullet">
-            <img class="b-image" src="in_progress.png" alt="">
+            <img class="b-image" src="curious.png" alt="">
             <span class="b-title">Curioso</span>
             <span class="b-description">Scoprire nuovi approcci metodologici.</span>
           </div>
