--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="This is my personal website.">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="!style_minified.css">
   <link rel="stylesheet" href="roboto.css">
-  <script src="script.js"></script>
+  <script src="!script_minified.js  "></script>
 </head>
 
 <body>
     <section id="presentation" class="presentation">
-      <span>Ciao, sono <b>Valerio</b>. <br>Sono uno sviluppatore Front-End.</span>
+      <span>Ciao, sono <b>Valerio delle Fave</b>. <br>Sono uno sviluppatore Front-End.</span>
       <button class="startButton" onclick="start()">Iniziamo!</button>
     </section>
     <nav id="menu" class="menu">
