--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="This is my personal website.">
+  <link rel="icon" type="image/png" href="Favicon.png"/>
   <link rel="stylesheet" href="!style_minified.css">
   <link rel="stylesheet" href="roboto.css">
   <script src="!script_minified.js  "></script>
