--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="!style_minified.css">
   <link rel="stylesheet" href="roboto.css">
   <script src="!script_minified.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9738570853520818" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9738570853520818"
+     crossorigin="anonymous"></script>
   <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="v.dellefave" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
 </head>
 
