added custom icons

--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
       <div class="aboutContainer">
         <div class="bullets">
           <div class="bullet">
-            <img loading="lazy" class="b-image" src="speed.png" alt="speed image" title="speed image">
+            <img loading="lazy" class="b-image" src="speed.svg" alt="speed image" title="speed image">
             <span class="b-title">Veloce</span>
             <span class="b-description">Una grande priorità è ottenere i caricamenti rapidi durante le interazioni.</span>
           </div>
           <div class="bullet">
-            <img loading="lazy" class="b-image" src="simple.png" alt="simple image" title="simple image">
+            <img loading="lazy" class="b-image" src="simple.svg" alt="simple image" title="simple image">
             <span class="b-title">Semplice</span>
             <span class="b-description">"Keep it simple".</span>
           </div>
           <div class="bullet">
-            <img loading="lazy" class="b-image" src="dynamic.png" alt="dynamic image" title="dynamic image">
+            <img loading="lazy" class="b-image" src="dynamic.svg" alt="dynamic image" title="dynamic image">
             <span class="b-title">Dinamico</span>
             <span class="b-description">I vari layouts devono adattarsi a ogni forma, grande o piccola che sia.</span>
           </div>
           <div class="bullet">
-            <img loading="lazy" class="b-image" src="curious.png" alt="curious image" title="curious image">
+            <img loading="lazy" class="b-image" src="curious.svg" alt="curious image" title="curious image">
             <span class="b-title">Curioso</span>
             <span class="b-description">Scoprire nuovi approcci metodologici.</span>
           </div>
